init-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 2
  serviceName: hello
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: bob2606/hello-http:0.8.33
          name: hello-http
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: /var/lib/hello-http
              name: status

      volumes:
        - name: status
          emptyDir:
