micro-tp-2.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx:1.28
    name: nginx
  - image: php:8.4-fpm-alpine
    name: php
  dnsPolicy: ClusterFirst
  restartPolicy: Always
