micro-tp-7.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello
    spec:
      containers:
      - image: bob2606/hello-http:0.8.33
        name: hello-http
        ports:
          - name: http
            containerPort: 80
        livenessProbe:
          httpGet:
            path: /livez
            port: 80
          periodSeconds: 15
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 5
          failureThreshold: 3
        resources: {}
status: {}
