nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  generation: 2
  labels:
    run: www
    env: dev
  name: www
spec:
  containers:
  - image: nginx
    name: nginx
  dnsPolicy: ClusterFirst
  restartPolicy: Always
