test-daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: test
  name: test
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - command:
        - tail
        - -f
        - /dev/null
        image: busybox:1.28
        name: busybox
