hello-svc-headless.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello
  name: hello
spec:
  clusterIP: None
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: hello
  type: ClusterIP
status:
  loadBalancer: {}
