hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello
  name: hello
spec:
  clusterIP: 172.16.20.20
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
  type: ClusterIP
status:
  loadBalancer: {}
