lemp-svc-np.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: lemp
  name: lemp
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: lemp
  type: NodePort
status:
  loadBalancer: {}
