lemp-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lemp
  name: lemp
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: lemp
  type: ClusterIP
