lemp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: lemp
spec:
  ingressClassName: nginx
  rules:
  - host: lemp2.stage.local
    http:
      paths:
      - backend:
          service:
            name: lemp
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
